{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 115,
  "lineage": "08669b23-a59b-5b36-7f91-407f7714c580",
  "resources": [
    {
      "module": "module.azure_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my_nic",
      "provider": "module.azure_vm.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/networkInterfaces/myNIC-0",
            "internal_domain_name_suffix": "ukpzoyfh35yepmy5llrxgwaydb.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNICConfig-0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/publicIPAddresses/myPublicIP-0",
                "subnet_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySubnet"
              }
            ],
            "location": "centralus",
            "mac_address": "60-45-BD-2F-DA-16",
            "name": "myNIC-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Terraform",
            "virtual_machine_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Compute/virtualMachines/Master"
          },
          "dependencies": [
            "module.azure_vm.azurerm_public_ip.example",
            "module.azure_vm.azurerm_resource_group.terraform",
            "module.azure_vm.azurerm_subnet.subnet",
            "module.azure_vm.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/networkInterfaces/myNIC-1",
            "internal_domain_name_suffix": "ukpzoyfh35yepmy5llrxgwaydb.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNICConfig-1",
                "primary": true,
                "private_ip_address": "10.0.1.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/publicIPAddresses/myPublicIP-1",
                "subnet_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySubnet"
              }
            ],
            "location": "centralus",
            "mac_address": "00-0D-3A-97-7D-D1",
            "name": "myNIC-1",
            "private_ip_address": "10.0.1.7",
            "private_ip_addresses": [
              "10.0.1.7"
            ],
            "resource_group_name": "Terraform",
            "virtual_machine_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Compute/virtualMachines/node1"
          },
          "dependencies": [
            "module.azure_vm.azurerm_public_ip.example",
            "module.azure_vm.azurerm_resource_group.terraform",
            "module.azure_vm.azurerm_subnet.subnet",
            "module.azure_vm.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/networkInterfaces/myNIC-2",
            "internal_domain_name_suffix": "ukpzoyfh35yepmy5llrxgwaydb.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNICConfig-2",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/publicIPAddresses/myPublicIP-2",
                "subnet_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySubnet"
              }
            ],
            "location": "centralus",
            "mac_address": "00-0D-3A-94-94-9A",
            "name": "myNIC-2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "Terraform",
            "virtual_machine_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Compute/virtualMachines/node2"
          },
          "dependencies": [
            "module.azure_vm.azurerm_public_ip.example",
            "module.azure_vm.azurerm_resource_group.terraform",
            "module.azure_vm.azurerm_subnet.subnet",
            "module.azure_vm.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/networkInterfaces/myNIC-3",
            "internal_domain_name_suffix": "ukpzoyfh35yepmy5llrxgwaydb.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNICConfig-3",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/publicIPAddresses/myPublicIP-3",
                "subnet_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySubnet"
              }
            ],
            "location": "centralus",
            "mac_address": "60-45-BD-30-37-86",
            "name": "myNIC-3",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "Terraform",
            "virtual_machine_id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Compute/virtualMachines/node3"
          },
          "dependencies": [
            "module.azure_vm.azurerm_public_ip.example",
            "module.azure_vm.azurerm_resource_group.terraform",
            "module.azure_vm.azurerm_subnet.subnet",
            "module.azure_vm.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "module.azure_vm.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "location": "centralus",
            "name": "myNSG",
            "resource_group_name": "Terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_all",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure_vm.azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_all",
      "provider": "module.azure_vm.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/networkSecurityGroups/myNSG/securityRules/allow_all",
            "name": "allow_all",
            "network_security_group_name": "myNSG",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure_vm.azurerm_network_security_group.nsg",
            "module.azure_vm.azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example",
      "provider": "module.azure_vm.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/publicIPAddresses/myPublicIP-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.100.107",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "myPublicIP-0",
            "resource_group_name": "Terraform",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.azure_vm.azurerm_resource_group.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/publicIPAddresses/myPublicIP-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.100.112",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "myPublicIP-1",
            "resource_group_name": "Terraform",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.azure_vm.azurerm_resource_group.terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/publicIPAddresses/myPublicIP-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.102.105",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "myPublicIP-2",
            "resource_group_name": "Terraform",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.azure_vm.azurerm_resource_group.terraform"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/publicIPAddresses/myPublicIP-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.102.89",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "myPublicIP-3",
            "resource_group_name": "Terraform",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.azure_vm.azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vm",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "module.azure_vm.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySubnet",
            "name": "mySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Terraform",
            "virtual_network_name": "myVNet"
          },
          "dependencies": [
            "module.azure_vm.azurerm_resource_group.terraform",
            "module.azure_vm.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vm",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "module.azure_vm.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "60979fa2-efa7-47f0-b31f-5ae373581819",
            "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/virtualNetworks/myVNet",
            "location": "centralus",
            "name": "myVNet",
            "resource_group_name": "Terraform",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/92ae0cbf-d519-45df-bc7b-20c9bfb59006/resourceGroups/Terraform/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/mySubnet",
                "name": "mySubnet"
              }
            ]
          },
          "dependencies": [
            "module.azure_vm.azurerm_resource_group.terraform"
          ]
        }
      ]
    }
  ]
}